--- a/time.html
+++ b/time.html
@@ -8,7 +8,7 @@
     <title>Title</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,10 +20,130 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+
+
+
+    <!--JqueryUI-->
+    <link href="./jqui/jquery-ui.min.css" rel="stylesheet">
+    <script src="./jqui/jquery-ui.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <!--Adds proper functionality-->
+    <script src="time.js"></script>
 
 </head>
-<body>
 
+<body>
+<div class="dialog">
+    <h4 class="dialogText">Text Color:</h4>
+    <br>
+    <input class="form-control colorInput" placeholder="Enter A Color">
+    <br>
+    <button class="submitColor btn btn-primary">OK</button>
+    <button class="randomColor btn btn-primary">Random</button>
+</div>
+<span class="glyphicon glyphicon-option-vertical options" aria-hidden="true"></span>
+<div class="timeWrapper">
+
+    <span class="timeBlock">
+<h1 class="time">There Are <span class="minutesLeft"> Null </span> Minutes Left In <span class="hour">The</span> Hour</h1>
+        </span>
+    <span class="popup">
+
+    </span>
+</div>
+
+<div class="signatureContainer">
+    <h6 class="signature">App Developed By Aaron Pierce and RanRan Zhou</h6>
+</div>
 </body>
+<style>
+    html, body{
+        width: 100%;
+        height: 100%;
+        background-color: #333333;
+        text-align: center;
+        color: #337ab7;
+
+    }
+    .timeWrapper{
+        display:flex;
+        justify-content:flex-end;
+        align-items:center;
+        height: 75%;
+        width: 98%;
+    }
+    .time{
+
+        font-size: 15vw;
+    }
+    .signature{
+        /*color: #337ab7;*/
+        font-size: .75em;
+    }
+    .signatureContainer{
+        margin-bottom: 0;
+        height: 20%;
+        width: 100%;
+        display:flex;
+        justify-content:center;
+        align-items:flex-end;
+    }
+    .options{
+        float: right;
+        /*color: #337ab7;*/
+        font-size: 5vw;
+    }
+    .dialogText{
+        font-size: 5vw;
+    }
+</style>
+<script>
+    var CSS_COLOR_NAMES = ["AliceBlue","AntiqueWhite","Aqua","Aquamarine","Azure","Beige","Bisque","Black","BlanchedAlmond","Blue","BlueViolet","Brown","BurlyWood","CadetBlue","Chartreuse","Chocolate","Coral","CornflowerBlue","Cornsilk","Crimson","Cyan","DarkBlue","DarkCyan","DarkGoldenRod","DarkGray","DarkGrey","DarkGreen","DarkKhaki","DarkMagenta","DarkOliveGreen","Darkorange","DarkOrchid","DarkRed","DarkSalmon","DarkSeaGreen","DarkSlateBlue","DarkSlateGray","DarkSlateGrey","DarkTurquoise","DarkViolet","DeepPink","DeepSkyBlue","DimGray","DimGrey","DodgerBlue","FireBrick","FloralWhite","ForestGreen","Fuchsia","Gainsboro","GhostWhite","Gold","GoldenRod","Gray","Grey","Green","GreenYellow","HoneyDew","HotPink","IndianRed","Indigo","Ivory","Khaki","Lavender","LavenderBlush","LawnGreen","LemonChiffon","LightBlue","LightCoral","LightCyan","LightGoldenRodYellow","LightGray","LightGrey","LightGreen","LightPink","LightSalmon","LightSeaGreen","LightSkyBlue","LightSlateGray","LightSlateGrey","LightSteelBlue","LightYellow","Lime","LimeGreen","Linen","Magenta","Maroon","MediumAquaMarine","MediumBlue","MediumOrchid","MediumPurple","MediumSeaGreen","MediumSlateBlue","MediumSpringGreen","MediumTurquoise","MediumVioletRed","MidnightBlue","MintCream","MistyRose","Moccasin","NavajoWhite","Navy","OldLace","Olive","OliveDrab","Orange","OrangeRed","Orchid","PaleGoldenRod","PaleGreen","PaleTurquoise","PaleVioletRed","PapayaWhip","PeachPuff","Peru","Pink","Plum","PowderBlue","Purple","Red","RosyBrown","RoyalBlue","SaddleBrown","Salmon","SandyBrown","SeaGreen","SeaShell","Sienna","Silver","SkyBlue","SlateBlue","SlateGray","SlateGrey","Snow","SpringGreen","SteelBlue","Tan","Teal","Thistle","Tomato","Turquoise","Violet","Wheat","White","WhiteSmoke","Yellow","YellowGreen"];
+
+    //    This gets the text color from localstorage and sets it.
+    $(document).ready(function () {
+        var storedTextColor = localStorage.getItem("textColor");
+        if(storedTextColor === null){
+            localStorage.setItem("textColor", "#337ab7");
+            $("body, html").css("color", storedTextColor);
+
+        }else{
+            $("body, html").css("color", storedTextColor);
+            $(".colorInput").val(storedTextColor);
+        }
+
+    });
+
+    $(".randomColor").click(function () {
+        var randColor = CSS_COLOR_NAMES[getRandomInt(0, 146)];
+        $(".colorInput").val(randColor);
+        submitColor($(".colorInput").val());
+    });
+
+    $(".dialog").dialog({
+        autoOpen: false
+    });
+    $(".options").click(function () {
+        $(".dialog").dialog( "open" );
+    });
+    $(".submitColor").click(function () {
+        submitColor($(".colorInput").val());
+        $(".dialog").dialog( "close" );
+    });
+    $(".colorInput").keydown(function (e) {
+        if(e.keyCode === 13){
+            submitColor($(".colorInput").val());
+
+        }
+    });
+
+    function submitColor(color) {
+
+        $("body, html").css("color", color);
+        localStorage.setItem("textColor", color);
+    }
+    function getRandomInt(min, max) {
+        return Math.floor(Math.random() * (max - min + 1)) + min;
+    }
+</script>
 </html>
