--- a/time.html
+++ b/time.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-Waffle
+<p style="float: left; margin-left: 0%">Waffle</p>
 <div class="dialog">
     <h4 class="dialogText">Text Color:</h4>
     <br>
