--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         width: 100%;
         height: 100%;
         background-color: #333333;
-        text-align: center;
+        text-align: left;
     }
     .header{
         font-family: 'Exo', sans-serif;
