--- a/time.html
+++ b/time.html
@@ -28,7 +28,7 @@
     <script src="./jqui/jquery-ui.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <!--Adds proper functionality-->
-    <script src="time.min.js"></script>
+    <script src="time.js"></script>
 
 </head>
 
