--- a/time.html
+++ b/time.html
@@ -54,7 +54,7 @@
 </div>
 
 <div class="signatureContainer">
-    <h6 class="signature">App Developed By Aaron Pierce and RanRan Zhou</h6>
+    <h6 class="signature">App Developed By Aaron Pierce</h6>
 </div>
 </body>
 <style>
