--- a/time.html
+++ b/time.html
@@ -108,7 +108,7 @@
     $(document).ready(function () {
         var storedTextColor = localStorage.getItem("textColor");
         if(storedTextColor === null){
-            localStorage.setItem("textColor", "#337ab7");
+            localStorage.setItem("textColor", "SteelBlue");
             $("body, html").css("color", storedTextColor);
 
         }else{
